# wiiu-yt-altclient

./: .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  crossfile.ini  meson.build  subprojects
extlibs/: Makefile  README.md  actualMKF.mk.in  extlibsDLs.txt  genActualMKF.py
extlibs/subprojects/: bzip2-ytacl.wrap  quickjs-ng.wrap
extlibs/subprojects/packagefiles/bzip2-1.0.8/mesonpatch/: meson.build
include/: exceptions.h  font.h  main.h  ytACl_exceptions.h
include/config/: defaultConfig.h
src/: config.cpp  font.cpp  main.cpp  meson.build
